css/custom.css
/* ... */
nav .menu li a:hover,
nav .menu li a:focus {
    opacity: 0.7;
}

.nav-container nav .nav-bar {
    width: 100vw;
}

.b-menu-top-bar {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 10px;
    background: var(--default-color-brown);
}

.b-menu-top-bar > .secondary-menu {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    margin-bottom: 0;
}

.b-menu-top-bar > .secondary-menu li {
    margin: 0 10px;
    font-size: 14px;
}

.b-menu-top-bar > .secondary-menu li a {
    color: var(--default-color-beige);
    font-weight: 400;
    font-family: "Oswald", sans-serif;
    line-height: 1.2;
    word-spacing: 2px;
    opacity: 1;
    text-transform: capitalize;
}

.b-menu-top-bar > .secondary-menu li a:hover,
.b-menu-top-bar > .secondary-menu li a:focus {
    color: var(--default-color-white);
}

@media (max-width: 990px) {
    .nav-container nav .nav-bar > .module:first-child {
        width: unset;
    }
}

.nav-container nav.fixed,
.nav-container nav.fixed.nav-hide,
.nav-container nav.fixed .nav-utility {
    visibility: visible;
    opacity: 1;
}

.nav-hide {
    transform: unset;
    transition: all 0.3s;
}

/*----------------------------------*\
  WOO - PRODUCT PAGE
\*----------------------------------*/

/* layout */

.product-single {
    padding-left: 0;
    padding-right: 0;
}

@media (max-width: 768px) {
    .single-product section {
        padding: 0 0 40px 0;
    }
}

.single-product .container {
    width: 100%;
    margin-right: 0;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
}

.single-product .row {
    margin-right: 0;
    margin-left: 0;
}

.product .summary .product_title,
.product .summary .price,
.product .summary form,
.product .summary #section-product-ctas,
.product .summary .product_meta {
    text-align: center;
    margin: auto;
}

@media only screen and (min-width: 769px) {
    .product .summary .product_title,
    .product .summary .price,
    .product .summary form,
    .product .summary #section-product-ctas,
    .product .summary .product_meta {
        text-align: left;
        margin: unset;
    }
}

/* Product variations (mobile) */

@media (max-width: 768px) {
    .product .summary .variations {
        margin: 0 auto;
    }

    .product .summary .variations tr {
        display: flex;
        justify-content: center;
        align-items: center;
    }
}

/* Product title */

.product_title.entry-title {
    text-transform: uppercase;
    color: var(--product-default-color-brown);
}

@media (max-width: 768px) {
    .woocommerce div.product .product_title {
        padding: 0 10px;
    }
}

@media screen and (min-width: 900px) {
    .product_title.entry-title {
        font-size: 40px;
        line-height: 70px;
    }
}

/* Product Gallery */

@media only screen and (min-width: 1500px) {
    .woocommerce-product-gallery.woocommerce-product-gallery--with-images {
        padding: 0 20px 70px;
        display: flex;
        flex-direction: row;
        gap: 10px;
    }

    .woocommerce-product-gallery.woocommerce-product-gallery--with-images .flex-viewport {
        order: 1;
    }

    .woocommerce-product-gallery.woocommerce-product-gallery--with-images .flex-viewport .woocommerce-product-gallery__wrapper {
        display: flex;
        flex-direction: row;
    }

    .woocommerce-product-gallery.woocommerce-product-gallery--with-images .flex-control-nav {
        order: 0;
        max-width: 150px;
    }

    .woocommerce-product-gallery.woocommerce-product-gallery--with-images .flex-control-nav li {
        width: 100% !important;
    }
}

/* tabs */

.product-single div.product .woocommerce-tabs {
    border: 0;
}

.product-single div.product .woocommerce-tabs .panel {
    display: block !important;
    background: unset;
    border: 0;
    padding: 0;
    margin: 0;
}

.product-single div.product .woocommerce-tabs ul.tabs {
    display: none;
}

.woocommerce .wc-tab > h2 {
    display: none;
    text-align: center;
    font-size: 30px;
    word-spacing: 2px;
    font-weight: 500;
}

.woocommerce .wc-tab > .tab-content {
    /*    max-width: 900px;*/
    margin: 0 auto;
}

@media (max-width: 999px) {
    .single-product .section-intro > div:first-child {
        padding-bottom: 0;
    }
}

/* short desc. */

.woocommerce .star-rating span::before {
    color: var(--default-color-red);
}

.product .summary.entry-summary {
    display: flex;
    flex-direction: column;
}

.woocommerce-product-details__short-description {
    order: 98;
}

.product .summary.entry-summary > .product_meta {
    order: 99;
}

.woocommerce div.product form.cart div.quantity {
    margin: 0;
}

.woocommerce .quantity .qty,
.woocommerce button.button,
.woocommerce button.button.alt {
    height: 45px;
    border-radius: 0;
    border: 2px solid var(--default-color-dark-blue);
    font-size: 16px;
}

.woocommerce .quantity {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.woocommerce .quantity .qty {
    width: 60px;
}

.product-single div.product .summary .price {
    margin-bottom: 36px;
}

.woocommerce div.product form.cart {
    margin-bottom: unset;
}

.b-single-product-ctas [class^="button--"] {
    width: 235px;
}

[class^="ti-"],
[class*=" ti-"] {
    margin-right: 10px;
}

/*-----------------*\
  BLOG
\*-----------------*/

.blog .page-title,
.archive.category .page-title {
    background: url("https://hithean.com/wp-content/uploads/2024/09/blog-title-background-1.jpg");
    background-position: center;
    /* Center the image */
    background-repeat: no-repeat;
    /* Do not repeat the image */
    background-size: cover;
    /* Resize the background image to cover the entire container */
}

.archive.category .page-title .heading-title {
    display: none;
}

.blog-archive-title {
    text-align: center;
    margin: 20px 0;
    color: var(--default-color-dark-blue);
}
/* ... */

